Update and rename backingboarddesign.ipynb to index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
     "            raw_value = floattext_data[f\"{key_prefix}_{label}\"].value\n",
     "            value = float(raw_value) if raw_value.strip() != '' else None\n",
     "        except (ValueError, AttributeError):\n",
-    "            value = Nonㄷ\n",
+    "            value = None\n",
     "        floattext_values[label] = value\n",
     "    return floattext_values"
    ]
