--- a/index.ipynb
+++ b/index.ipynb
@@ -772,45 +772,40 @@
     "        Honey13_link = \"https://www.klug-conservation.com/honeycomb-panels-071-natural-white?\"\n",
     "        \n",
     "        # explanation for fiberfilling and backingboard panel\n",
+    "        fiberfilling_HTML = widgets.HTML(value = \"The recommended fiberfilling material:\")\n",
     "        WLG035_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        The recommended fiberfilling material is <b><i>Caruso Isobond WLG035</i></b>.<br>\n",
-    "        The recommended backingboard construction is only applicable for restoreation treatment.<br>\n",
-    "        more information: <a href=\"{WLG035_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><b>Caruso Isobond WLG035</b> &nbsp; more information: <a href=\"{WLG035_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a><br>\n",
+    "        The recommended backingboard construction is only applicable for <i>restoreation treatment</i>.</li></div>\n",
     "        \"\"\")\n",
     "        WLG040_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        The recommended fiberfilling material is <b><i>Caruso Isobond WLG040</i></b>.<br>\n",
-    "        The recommended backingboard construction is only applicable for transportation or/and exhibition.<br>\n",
-    "        more information: <a href=\"{WLG040_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><b>Caruso Isobond WLG040</b> &nbsp; more information: <a href=\"{WLG040_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a><br>\n",
+    "        The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</li></div>\n",
     "        \"\"\")\n",
     "        WLG045_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        The recommended fiberfilling material is <b><i>Caruso Isobond WLG045</i></b>.<br>\n",
-    "        The recommended backingboard construction is only applicable for transportation or/and exhibition.<br>\n",
-    "        more information: <a href=\"{WLG045_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><b>Caruso Isobond WLG045</b> &nbsp; more information: <a href=\"{WLG045_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a><br>\n",
+    "        The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.<br></li></div>\n",
     "        \"\"\")\n",
+    "        backboard_HTML = widgets.HTML(value = \"The recommended backboard panel:\")\n",
     "        EBB8_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        The recommended backingboard panel is <b><i>Corrugated cardboards EBB 8.0 mm</i></b>.<br>\n",
-    "        The recommended backingboard construction is only applicable for transportation or/and exhibition.<br>\n",
-    "        more information: <a href=\"{EBB8_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><b>Corrugated cardboards EBB 8.0 mm</b> &nbsp; more information: <a href=\"{EBB8_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        Honey7_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        The recommended backingboard panel is <b><i>Honeycomb cardboard 7.0 mm</i></b>.<br>\n",
-    "        The recommended backingboard construction is only applicable for transportation or/and exhibition.<br>\n",
-    "        more information: <a href=\"{Honey7_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><b>Honeycomb cardboard 7.0 mm</b> &nbsp; more information: <a href=\"{Honey7_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        Honey13_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        The recommended backingboard panel is <b><i>Honeycomb cardboard 13.0 mm</i></b>.<br>\n",
-    "        The recommended backingboard construction is only applicable for transportation or/and exhibition.<br>\n",
-    "        more information: <a href=\"{Honey13_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><b>Honeycomb cardboard 13.0 mm</b> &nbsp; more information: <a href=\"{Honey13_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
-    "        contact_HTML = widgets.HTML(value = \"\"\"The specifications entered do not allow for assignment to a material we have tested for this application.<br>\n",
-    "                Therefore, we recommend contacting us for your specific application.<br>\n",
-    "                <b>Contact: Dr. Ing. Kerstin Kracht, email k.kracht@tu-berlin.de</b>\"\"\")\n",
+    "        contact_HTML = widgets.HTML(\n",
+    "            value = \"\"\"The specifications entered do not allow for assignment to a material we have tested for this application.<br>\n",
+    "            Therefore, we recommend contacting us for your specific application.<br>\n",
+    "            <b>Contact: Dr. Ing. Kerstin Kracht, email k.kracht@tu-berlin.de</b>\"\"\")\n",
+    "        multi_HTML = widgets.HTML(value = \"<div style = 'margin: 0 0 0 20px;'>Please select one of the recommended backboard panel above. The further down the list, the stiffer they are.</div>\")\n",
     "\n",
     "        # calculation Area A [m^2]\n",
     "        A = None\n",
@@ -828,46 +823,46 @@
     "        rec_fiberfilling = None\n",
     "        if load_value != \"restoration treatment\":\n",
     "            if A is None:\n",
-    "                rec_fiberfilling = widgets.HTML(value = \"Please enter dimensions for fiberfilling material.</div>\")\n",
+    "                rec_fiberfilling = widgets.HTML(value = \"Please enter dimensions to get a recommendation for fiberfilling material..</div>\")\n",
     "            elif A > 1.5:\n",
     "                rec_fiberfilling = contact_HTML\n",
     "            elif deformation_value == \"heavy\":\n",
-    "                rec_fiberfilling = WLG045_HTML\n",
-    "            elif (deformation_value in (\"not at all\", \"medium\")) or (impasto_value == \"0%\"):\n",
-    "                rec_fiberfilling = WLG040_HTML\n",
-    "            elif impasto_value in (\"10%\", \"20%\", \"50%\"):\n",
-    "                rec_fiberfilling = WLG045_HTML\n",
+    "                rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG045_HTML])\n",
+    "            elif impasto_value in (\"0%\", \"10%\", \"20%\"):\n",
+    "                rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG045_HTML])\n",
+    "            elif (impasto_value == \"50%\") or (deformation_value in (\"not at all\", \"medium\")):\n",
+    "                rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG040_HTML])\n",
     "            else:\n",
     "                if A <= 0.3:\n",
-    "                    rec_fiberfilling = WLG045_HTML if pretension_value in (\"low\", \"low-medium\") else WLG040_HTML\n",
+    "                    rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG045_HTML]) if pretension_value in (\"low\", \"low-medium\") else widgets.VBox([fiberfilling_HTML, WLG040_HTML])\n",
     "                elif 0.3 < A <= 0.45:\n",
-    "                    rec_fiberfilling = WLG045_HTML if pretension_value in (\"medium\", \"medium-high\") else WLG040_HTML\n",
+    "                    rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG045_HTML]) if pretension_value in (\"medium\", \"medium-high\") else widgets.VBox([fiberfilling_HTML, WLG040_HTML])\n",
     "                elif 0.45 < A <= 0.6:\n",
-    "                    rec_fiberfilling = WLG045_HTML if pretension_value == \"high\" else WLG040_HTML\n",
+    "                    rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG045_HTML]) if pretension_value == \"high\" else widgets.VBox([fiberfilling_HTML, WLG040_HTML])\n",
     "                elif 0.6 < A <= 1.5:\n",
-    "                    rec_fiberfilling = WLG040_HTML\n",
+    "                    rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG040_HTML])\n",
     "        elif load_value == \"restoration treatment\":\n",
     "            if A is None:\n",
     "                rec_fiberfilling = widgets.HTML(value = \"Please enter dimensions to get a recommendation for fiberfilling material.</div>\")\n",
     "            elif A > 1.5:\n",
     "                rec_fiberfilling = contact_HTML\n",
     "            else:\n",
-    "                rec_fiberfilling = WLG035_HTML\n",
-    "\n",
+    "                rec_fiberfilling = widgets.VBox([fiberfilling_HTML, WLG035_HTML])\n",
+    "                \n",
     "        #recommending the backingboard panel\n",
     "        rec_backingboard = None\n",
     "        if A is None:\n",
     "            rec_backingboard = widgets.HTML(value = \"Please enter dimensions to get a recommendation for backingboard panel.</div>\")\n",
     "        else:\n",
     "            if A <= 0.35:\n",
-    "                rec_backingboard = EBB8_HTML\n",
+    "                rec_backingboard = widgets.VBox([backboard_HTML, EBB8_HTML, Honey7_HTML, Honey13_HTML, multi_HTML])\n",
     "            elif 0.35 < A <= 0.8:\n",
-    "                rec_backingboard = Honey7_HTML\n",
+    "                rec_backingboard = widgets.VBox([backboard_HTML, Honey7_HTML, Honey13_HTML, multi_HTML])\n",
     "            elif 0.8 < A <= 1.5:\n",
-    "                rec_backingboard = Honey13_HTML\n",
+    "                rec_backingboard = widgets.VBox([backboard_HTML, Honey13_HTML])\n",
     "            else:\n",
     "                rec_backingboard = contact_HTML\n",
-    "\n",
+    "                \n",
     "        # to show recommendation\n",
     "        rec_display = []\n",
     "        need_contact = False\n",
@@ -884,6 +879,7 @@
     "            display(w)\n",
     "        if need_contact:\n",
     "            display(contact_HTML)\n",
+    "            \n",
     "        # for download instruction\n",
     "        display(download_box)\n",
     "        # extract the values and show\n",
