--- a/backingboarddesign.ipynb
+++ b/backingboarddesign.ipynb
@@ -319,8 +319,8 @@
     "# to explain how to use this app\n",
     "preface_explanation = \"\"\"\n",
     "This application recommends a suitable backing board construction tailored to your artwork (easel paintings only).<br>\n",
-    "The maximum supported size is 150cm × 100cm (or 100cm × 150cm).<br>\n",
-    "For more accurate calculations and recommendations, <b>we strongly encourage you to fill in all input fields following the tabs from left to right.</b><br>\n",
+    "The maximum supported size is 1500mm × 1000mm (or 1000mm × 1500mm).<br>\n",
+    "For more accurate calculations and recommendations, <b>we strongly encourage you to fill in all input fields following the tabs from left to right</b>, and enter all decimal numbers using a dot(.) as the decimal separator (e.g. writhe 1.25, not 1,25), following the <b>English numeric convention</b>.<br>\n",
     "Please note that if some measurements are unavailable and certain fields are left blank, the accuracy of the results may be reduced.<br>\n",
     "<b>Fields marked with a red box are mandatory — without these, the recommendation cannot be completed.</b><br>\n",
     "<br>\n",
