--- a/backingboarddesign.ipynb
+++ b/backingboarddesign.ipynb
@@ -141,8 +141,8 @@
     "                                )\n",
     "        explanation.layout.display = 'none'\n",
     "        toggle_button = widgets.Button(\n",
-    "            description='▶ open explanation',\n",
-    "            layout=widgets.Layout(width='150px')\n",
+    "            description = '▶ open explanation',\n",
+    "            layout=widgets.Layout(width = '150px')\n",
     "        )\n",
     "        def toggle_explanation(btn):\n",
     "            if explanation.layout.display == 'none':\n",
@@ -974,7 +974,7 @@
    "outputs": [],
    "source": [
     "# make instruction download button\n",
-    "instruction_label = widgets.HTML(\"For installation instruction (click to download):&nbsp;\")\n",
+    "instruction_label = widgets.HTML(\"Installation instruction (click to download):&nbsp;\")\n",
     "instruction_link = widgets.Output()\n",
     "with instruction_link:\n",
     "    display(FileLink(\"instruction.pdf\"))\n",
@@ -1087,17 +1087,7 @@
     "    global preliminary_values\n",
     "    with result_output:\n",
     "        clear_output()\n",
-    "        # show frequency\n",
-    "        if f is not None:\n",
-    "            label = \"entered\" if mode == 'entered' else \"calculated\"\n",
-    "            display(widgets.HTML(f\"\"\"\n",
-    "            <div style = 'margin: 0 0 10px 0;'>\n",
-    "            The {label} respectively measured first natural frequency of the painted canvas is {f:.1f} Hz.\n",
-    "            </div>\"\"\"\n",
-    "            ))\n",
-    "        else:\n",
-    "            display(widgets.HTML(\"No frequency entered/calculated yet.\"))\n",
-    "       \n",
+    "        \n",
     "        # to show recommendations\n",
     "        # common values for later recommendation\n",
     "        canvas_shape = radiobutton_data[\"canvas\"].value\n",
@@ -1120,37 +1110,40 @@
     "        Honey13_link = \"https://www.klug-conservation.com/honeycomb-panels-071-natural-white?\"\n",
     "        \n",
     "        # explanation for fiberfilling and backingboard panel\n",
-    "        fiberfilling_HTML = widgets.HTML(value = \"The recommended fiberfilling material:\")\n",
+    "        fiberfilling_HTML = widgets.HTML(value = \"fiberfilling material:\")\n",
     "        WLG035_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        <div style = 'margin: 0 0 0 20px;'><li><b>Caruso Isobond WLG035</b> &nbsp; more information: <a href=\"{WLG035_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a><br>\n",
-    "        The recommended backingboard construction is only applicable for <i>restoreation treatment</i>.</li></div>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Caruso Isobond WLG035</span> &nbsp; more information: <a href=\"{WLG035_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li>\n",
+    "        <div'>The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</div>\n",
+    "        </div>\n",
     "        \"\"\")\n",
     "        WLG040_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        <div style = 'margin: 0 0 0 20px;'><li><b>Caruso Isobond WLG040</b> &nbsp; more information: <a href=\"{WLG040_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a><br>\n",
-    "        The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</li></div>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Caruso Isobond WLG040</span> &nbsp; more information: <a href=\"{WLG040_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li>\n",
+    "        <div'>The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</div>\n",
+    "        </div>\n",
     "        \"\"\")\n",
     "        WLG045_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        <div style = 'margin: 0 0 0 20px;'><li><b>Caruso Isobond WLG045</b> &nbsp; more information: <a href=\"{WLG045_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a><br>\n",
-    "        The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.<br></li></div>\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Caruso Isobond WLG045</span> &nbsp; more information: <a href=\"{WLG045_link}\"\n",
+    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li>\n",
+    "        <div'>The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</div>\n",
+    "        </div>\n",
     "        \"\"\")\n",
-    "        backboard_HTML = widgets.HTML(value = \"The recommended backboard panel:\")\n",
+    "        backboard_HTML = widgets.HTML(value = \"backboard panel:\")\n",
     "        EBB8_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        <div style = 'margin: 0 0 0 20px;'><li><b>Corrugated cardboards EBB 8.0 mm</b> &nbsp; more information: <a href=\"{EBB8_link}\"\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Corrugated cardboards EBB 8.0 mm</span> &nbsp; more information: <a href=\"{EBB8_link}\"\n",
     "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        Honey7_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        <div style = 'margin: 0 0 0 20px;'><li><b>Honeycomb cardboard 7.0 mm</b> &nbsp; more information: <a href=\"{Honey7_link}\"\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Honeycomb cardboard 7.0 mm</span> &nbsp; more information: <a href=\"{Honey7_link}\"\n",
     "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        Honey13_HTML = widgets.HTML(value = f\"\"\"\n",
-    "        <div style = 'margin: 0 0 0 20px;'><li><b>Honeycomb cardboard 13.0 mm</b> &nbsp; more information: <a href=\"{Honey13_link}\"\n",
+    "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Honeycomb cardboard 13.0 mm</span> &nbsp; more information: <a href=\"{Honey13_link}\"\n",
     "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
-    "        contact_HTML = widgets.HTML(value = \"\"\"The specifications entered do not allow for assignment to a material we have tested for this application. Any use of this tool is at your own discretion.<br>\n",
-    "        Therefore, we recommend reviewing the cited publications in the <b>Disclaimer</b> tab before proceeding.<br><br>\n",
+    "        contact_HTML = widgets.HTML(value = \"\"\"reviewing the cited publications in the <b>Disclaimer</b> tab before proceeding.<br>\n",
+    "        The specifications you entered cannot be assigned to any material we have tested for this application. Therefore, any use of this tool is at your own discretion.<br><br>\n",
     "        \"\"\")\n",
     "        multi_HTML = widgets.HTML(value = \"<div style = 'margin: 0 0 0 20px;'>Please select one of the recommended backboard panel above. The further down the list, the stiffer they are.</div>\")\n",
     "\n",
@@ -1209,29 +1202,8 @@
     "                rec_backingboard = widgets.VBox([backboard_HTML, Honey13_HTML])\n",
     "            else:\n",
     "                rec_backingboard = contact_HTML\n",
-    "                \n",
-    "        # to show recommendation\n",
-    "        rec_display = []\n",
-    "        need_contact = False\n",
-    "        def is_contact(w):\n",
-    "            return (w is contact_HTML) or (hasattr(w, \"value\") and getattr(w, \"value\", \"\") == contact_HTML.value)\n",
-    "        for w in (rec_fiberfilling, rec_backingboard):\n",
-    "            if not w:\n",
-    "                continue\n",
-    "            if is_contact(w):\n",
-    "                need_contact = True\n",
-    "            else:\n",
-    "                rec_display.append(w)\n",
-    "        for w in rec_display:\n",
-    "            display(w)\n",
-    "        if need_contact:\n",
-    "            display(contact_HTML)\n",
-    "            \n",
-    "        # for download instruction\n",
-    "        display(download_box)\n",
     "        \n",
     "        # extract the values and show\n",
-    "        display(widgets.HTML(\"Summary of your specifications:\"))\n",
     "        preliminary_values = {\n",
     "            \"planned_mechanical_load\": radiobutton_data[\"load\"].value,\n",
     "            \"format_of_canvas\": radiobutton_data[\"canvas\"].value,\n",
@@ -1288,28 +1260,84 @@
     "        csd_values = get_floattext_values(\"csd\", csd_unit_pairs)\n",
     "\n",
     "        # display the results\n",
-    "        show_group(\"Preliminary:\", preliminary_values)\n",
-    "        if mea_mode.startswith(\"individually\"):\n",
-    "            show_group(\"Canvas:\", canvas_values, canvas_unit_map)\n",
-    "            show_group(\"Stretcher:\", stretcher_values, stretcher_unit_map)\n",
-    "            filtered_cwf_values = cwf_values.copy()\n",
-    "            if radiobutton_data[\"cwf\"].value != \"weight with glazing\":\n",
-    "                glazing_keys = [k for k in filtered_cwf_values.keys() if \"glazing\" in k and k != \"glazing\"]\n",
-    "                for key in glazing_keys:\n",
-    "                    filtered_cwf_values.pop(key, None)\n",
-    "                if \"type_of_glazing\" in filtered_cwf_values:\n",
-    "                    filtered_cwf_values.pop(\"type_of_glazing\", None)\n",
-    "            show_group(\"Decorative frame:\", cwf_values, cwf_unit_map)\n",
-    "        elif mea_mode.startswith(\"partially\"):\n",
-    "            show_group(\"Total (canvas + stretcher)\", canvasstretcher_values, canvasstretcher_unit_map)\n",
-    "            show_group(\"Canvas:\", canvas_values, canvas_unit_map)\n",
-    "            show_group(\"Stretcher:\", stretcher_values, stretcher_unit_map)\n",
-    "            show_group(\"Decorative frame:\", cwf_values, cwf_unit_map)\n",
-    "        elif mea_mode.startswith(\"as a whole\"):\n",
-    "            show_group(\"Total (canvas + stretcher + decorative frame)\", csd_values, csd_unit_map)\n",
-    "            show_group(\"Canvas:\", canvas_values, canvas_unit_map)\n",
-    "            show_group(\"Stretcher:\", stretcher_values, stretcher_unit_map)\n",
-    "            show_group(\"Decorative frame:\", cwf_values, cwf_unit_map)"
+    "        # for frequency\n",
+    "        if f is not None:\n",
+    "            label = \"entered\" if mode == 'entered' else \"calculated\"\n",
+    "            display(widgets.HTML(f\"\"\"\n",
+    "            The {label} respectively measured first natural frequency of the painted canvas is <b><span style = 'font-size: 18px'>{f:.1f} Hz</span></b>.\n",
+    "            \"\"\"\n",
+    "            ))\n",
+    "        else:\n",
+    "            display(widgets.HTML(\"No frequency entered/calculated yet.\"))\n",
+    "            \n",
+    "        # for input summary\n",
+    "        toggle_button = widgets.ToggleButton(value = False,\n",
+    "                                            description = '▶ open summary of your specifications',\n",
+    "                                            layout = widgets.Layout(width = 'auto')\n",
+    "                                           )\n",
+    "        toggle_output = widgets.Output()\n",
+    "        hint_label = widgets.HTML(\"<div style = 'margin: 0 0 0 10px'><i>Please check that the inputs are entered correctly</i>.</div>\")\n",
+    "        def on_toggle_change(change):\n",
+    "            toggle_output.clear_output()\n",
+    "            if change['new']:\n",
+    "                toggle_button.description = '▼ close summary of your specifications'\n",
+    "                hint_label.layout.visibility = 'hidden'\n",
+    "                with toggle_output:\n",
+    "                    show_group(\"Preliminary:\", preliminary_values)\n",
+    "                    if mea_mode.startswith(\"individually\"):\n",
+    "                        show_group(\"Canvas:\", canvas_values, canvas_unit_map)\n",
+    "                        show_group(\"Stretcher:\", stretcher_values, stretcher_unit_map)\n",
+    "                        filtered_cwf_values = cwf_values.copy()\n",
+    "                        if radiobutton_data[\"cwf\"].value != \"weight with glazing\":\n",
+    "                            glazing_keys = [k for k in filtered_cwf_values.keys() if \"glazing\" in k and k != \"glazing\"]\n",
+    "                            for key in glazing_keys:\n",
+    "                                filtered_cwf_values.pop(key, None)\n",
+    "                            if \"type_of_glazing\" in filtered_cwf_values:\n",
+    "                                filtered_cwf_values.pop(\"type_of_glazing\", None)\n",
+    "                        show_group(\"Decorative frame:\", cwf_values, cwf_unit_map)\n",
+    "                    elif mea_mode.startswith(\"partially\"):\n",
+    "                        show_group(\"Total (canvas + stretcher)\", canvasstretcher_values, canvasstretcher_unit_map)\n",
+    "                        show_group(\"Canvas:\", canvas_values, canvas_unit_map)\n",
+    "                        show_group(\"Stretcher:\", stretcher_values, stretcher_unit_map)\n",
+    "                        show_group(\"Decorative frame:\", cwf_values, cwf_unit_map)\n",
+    "                    elif mea_mode.startswith(\"as a whole\"):\n",
+    "                        show_group(\"Total (canvas + stretcher + decorative frame)\", csd_values, csd_unit_map)\n",
+    "                        show_group(\"Canvas:\", canvas_values, canvas_unit_map)\n",
+    "                        show_group(\"Stretcher:\", stretcher_values, stretcher_unit_map)\n",
+    "                        show_group(\"Decorative frame:\", cwf_values, cwf_unit_map)\n",
+    "            else:\n",
+    "                toggle_button.description = '▶ open summary of your specifications'\n",
+    "                hint_label.layout.visibility = 'visible'\n",
+    "        toggle_button.observe(on_toggle_change, names = 'value')\n",
+    "        toggle_box = widgets.HBox([toggle_button, hint_label])\n",
+    "        display(toggle_box)\n",
+    "        display(toggle_output)\n",
+    "\n",
+    "        # for recommendation\n",
+    "        display(spacer(10))\n",
+    "        rec_HTML = widgets.HTML(\"<div style = 'font-size: 18px;'><b>We recommend</b></div>\")\n",
+    "        if A is not None:\n",
+    "            display(rec_HTML)\n",
+    "        rec_display = []\n",
+    "        need_contact = False\n",
+    "        def is_contact(w):\n",
+    "            return (w is contact_HTML) or (hasattr(w, \"value\") and getattr(w, \"value\", \"\") == contact_HTML.value)\n",
+    "        for w in (rec_fiberfilling, rec_backingboard):\n",
+    "            if not w:\n",
+    "                continue\n",
+    "            if is_contact(w):\n",
+    "                need_contact = True\n",
+    "            else:\n",
+    "                rec_display.append(w)\n",
+    "        for w in rec_display:\n",
+    "            display(w)\n",
+    "        if need_contact:\n",
+    "            display(contact_HTML)\n",
+    "\n",
+    "        # for instruction download\n",
+    "        display(spacer(10))\n",
+    "        display(download_box)\n",
+    "        "
    ]
   },
   {
