--- a/backingboarddesign.ipynb
+++ b/backingboarddesign.ipynb
@@ -974,6 +974,13 @@
    "outputs": [],
    "source": [
     "# make instruction download button\n",
+    "display(HTML('''\n",
+    "<style>\n",
+    ".jupyter-widgets a {\n",
+    "    color: #2E5C8A !important;\n",
+    "}\n",
+    "</style>\n",
+    "'''))\n",
     "instruction_label = widgets.HTML(\"Installation instruction (click to download):&nbsp;\")\n",
     "instruction_link = widgets.Output()\n",
     "with instruction_link:\n",
@@ -992,7 +999,7 @@
     "    Preprints of ICOM-CC Triennial Conference, Valencia, 2023.<br>\n",
     "    <a href=\"https://www.icom-cc-publications-online.org/5683/Optimising-the-protection-of-the-Kroller-Muller-Museums-wax-resin-lined-van-Gogh-paintings-from-shocks-and-vibrations-in-transit\"\n",
     "        target=\"_blank\" \n",
-    "        style=\"color:blue; text-decoration:underline;\">\n",
+    "        style=\"color:#2E5C8A; text-decoration:underline;\">\n",
     "        https://www.icom-cc-publications-online.org/5683/Optimising-the-protection-of-the-Kroller-Muller-Museums-wax-resin-lined-van-Gogh-paintings-from-shocks-and-vibrations-in-transit\n",
     "    </a>\n",
     "    <br><br>\n",
@@ -1001,7 +1008,7 @@
     "    Prensentation and postprints of AIC's 53rd annual meeting, Minneapolis, 2025.<br>\n",
     "    <a href=\"https://aic53rdannualmeeting2025.sched.com/event/1t4Lm/preventive-care-van-gogh-in-motion-safeguarding-lined-and-unlined-van-gogh-paintings-from-vibration-and-mechanical-shock-during-transport-remote-presentation\"\n",
     "        target=\"_blank\" \n",
-    "        style=\"color:blue; text-decoration:underline;\">\n",
+    "        style=\"color:#2E5C8A; text-decoration:underline;\">\n",
     "        https://aic53rdannualmeeting2025.sched.com/event/1t4Lm/preventive-care-van-gogh-in-motion-safeguarding-lined-and-unlined-van-gogh-paintings-from-vibration-and-mechanical-shock-during-transport-remote-presentation\n",
     "    </a>\n",
     "    <br><br>\n",
@@ -1113,34 +1120,34 @@
     "        fiberfilling_HTML = widgets.HTML(value = \"fiberfilling material:\")\n",
     "        WLG035_HTML = widgets.HTML(value = f\"\"\"\n",
     "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Caruso Isobond WLG035</span> &nbsp; more information: <a href=\"{WLG035_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li>\n",
+    "        target=\"_blank\" style=\"color:#2E5C8A; text-decoration:underline;\">Click here</a></li>\n",
     "        <div'>The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</div>\n",
     "        </div>\n",
     "        \"\"\")\n",
     "        WLG040_HTML = widgets.HTML(value = f\"\"\"\n",
     "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Caruso Isobond WLG040</span> &nbsp; more information: <a href=\"{WLG040_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li>\n",
+    "        target=\"_blank\" style=\"color:#2E5C8A; text-decoration:underline;\">Click here</a></li>\n",
     "        <div'>The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</div>\n",
     "        </div>\n",
     "        \"\"\")\n",
     "        WLG045_HTML = widgets.HTML(value = f\"\"\"\n",
     "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Caruso Isobond WLG045</span> &nbsp; more information: <a href=\"{WLG045_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li>\n",
+    "        target=\"_blank\" style=\"color:#2E5C8A; text-decoration:underline;\">Click here</a></li>\n",
     "        <div'>The recommended backingboard construction is only applicable for <i>transportation or/and exhibition</i>.</div>\n",
     "        </div>\n",
     "        \"\"\")\n",
     "        backboard_HTML = widgets.HTML(value = \"backboard panel:\")\n",
     "        EBB8_HTML = widgets.HTML(value = f\"\"\"\n",
     "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Corrugated cardboards EBB 8.0 mm</span> &nbsp; more information: <a href=\"{EBB8_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
+    "        target=\"_blank\" style=\"color:#2E5C8A; text-decoration:underline;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        Honey7_HTML = widgets.HTML(value = f\"\"\"\n",
     "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Honeycomb cardboard 7.0 mm</span> &nbsp; more information: <a href=\"{Honey7_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
+    "        target=\"_blank\" style=\"color:#2E5C8A; text-decoration:underline;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        Honey13_HTML = widgets.HTML(value = f\"\"\"\n",
     "        <div style = 'margin: 0 0 0 20px;'><li><span style = 'font-weight:500;'>Honeycomb cardboard 13.0 mm</span> &nbsp; more information: <a href=\"{Honey13_link}\"\n",
-    "        target=\"_blank\" style=\"color:blue; text-decoration:underline; font-weight:bold;\">Click here</a></li></div>\n",
+    "        target=\"_blank\" style=\"color:#2E5C8A; text-decoration:underline;\">Click here</a></li></div>\n",
     "        \"\"\")\n",
     "        contact_HTML = widgets.HTML(value = \"\"\"reviewing the cited publications in the <b>Disclaimer</b> tab before proceeding.<br>\n",
     "        The specifications you entered cannot be assigned to any material we have tested for this application. Therefore, any use of this tool is at your own discretion.<br><br>\n",
