--- a/backingboarddesign.ipynb
+++ b/backingboarddesign.ipynb
@@ -1543,7 +1543,7 @@
     "                                  \"medium-high\": 1.1, \"high\": 1.2}\n",
     "            LiningFactors = {\"0\": 1, \"1\": 1.1, \"2\": 1.2, \"3\": 1.3}\n",
     "            DeformFactors = {\"not at all\": 1, \"slightly\": 1.1, \"medium\": 1.2,\n",
-    "                                   \"heavy\": 1.3, \"very heavily\": 1.4}\n",
+    "                                   \"heavily\": 1.3, \"very heavily\": 1.4}\n",
     "\n",
     "            TensionFactor = TensionFactors.get(pretension_value, None)\n",
     "            LiningFactor = LiningFactors.get(lining_value, None)\n",
