--- a/backingboarddesign.ipynb
+++ b/backingboarddesign.ipynb
@@ -1139,12 +1139,13 @@
     "            f_val = 0.0\n",
     "        html = \"\"\"\n",
     "<div style=\"\n",
+    "    font-size: 18px;\n",
     "    position: fixed;\n",
-    "    bottom: 10px;\n",
-    "    right: 10px;\n",
+    "    bottom: 15px;\n",
+    "    right: 15px;\n",
     "    color: #ffffff;\n",
     "    background-color: #007bff;\n",
-    "    padding: 10px;\n",
+    "    padding: 6px;\n",
     "    border-radius: 8px;\n",
     "    box-shadow: 0 2px 5px rgba(0,0,0,0.1);\n",
     "    z-index: 1000;\n",
