--- a/backingboarddesign.ipynb
+++ b/backingboarddesign.ipynb
@@ -1661,16 +1661,19 @@
     "    decision_output.clear_output()\n",
     "    with decision_output:\n",
     "        if f_toggle.value:\n",
-    "            f_calculation()\n",
-    "            update_float_box()\n",
-    "            display(f_known_box)\n",
     "            if change and change.get(\"new\") == True:\n",
+    "                f_known.value = 0.0\n",
     "                result_state[\"f\"] = None\n",
     "                result_state[\"mode\"] = None\n",
     "                #result_state[\"mea_mode\"] = None\n",
+    "                update_float_box()\n",
+    "                display(f_known_box)\n",
     "                result_summary(f=None, mode=None) #, mea_mode=None)\n",
-    "            else:\n",
-    "                result_summary(**result_state)\n",
+    "                return\n",
+    "            f_calculation()\n",
+    "            update_float_box()\n",
+    "            display(f_known_box)\n",
+    "            result_summary(**result_state)\n",
     "        else:\n",
     "            display(f_unknown_box)\n",
     "            f_calculation()\n",
@@ -1808,14 +1811,6 @@
     "full_ui = widgets.Box([tabs], layout = widgets.Layout(width = \"100%\"))\n",
     "display(full_ui, float_box)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "484b11ec-415d-42ac-8b93-54f60ec5ed5c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
